associate CLogger with Overlap structure

--- a/logger_tester/loggerTester.vcxproj
+++ b/logger_tester/loggerTester.vcxproj
@@ -107,7 +107,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Users\XPS\cppProjects\logger\logger</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\logger</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
